--- a/app/component/SelectTest/style.scss
+++ b/app/component/SelectTest/style.scss
@@ -30,3 +30,8 @@
     outline: none;
     box-shadow: 0 6px 16px 0 rgba(0, 0, 0, 0.08), 0 3px 6px -4px rgba(0, 0, 0, 0.12), 0 9px 28px 8px rgba(0, 0, 0, 0.05);
 }
+.check-box-select {
+    &:hover {
+        background-color: rgb(245, 243, 243);
+    }
+}
